первая версия, которая генерирует сведения о пилотах и местах где они участвуют в pvp/pve

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# This repository features
+/report.html
+/pilots.json
+/killmails.json
+/sde.zip
+/sde-TRANQUILITY.zip
+/sde-*-TRANQUILITY.zip
+/activity_settings.py
+/0
+/1
+/2
+/solar_systems_cache.json
+/unique_names_cache*.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
