настройку "начало анализа" перенёс в глобальный файл с настройками добавил раздел "крабство" в статистику пилота (npc-only killmails) добавил раздел "наиболее опасные системы в регионе"

--- a/activity_settings.py.template
+++ b/activity_settings.py.template
@@ -7,3 +7,4 @@ g_eveserver = 'tranquility' # eveonline' server
 #please specify:g_user_agent = 'http://your-server(dot)com/ Maintainer: {maintainer}'.format(maintainer=g_maintainer) 
 #please specify:g_tmp_directory = '/full/path/to/generated/files' # for example : /tmp
 #please specify:g_solar_systems = [?] # for example : ['Y-W6GF','5KS-AB','KLYN-8','5-VKCN','3MOG-V']
+#please specify:g_start_date = "2100-01-01T00:00:00Z"
